Added splash page

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,20 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase
+.firebase.json
+.firebase.indexes.json
+.firestore.rules
+
+# Pubspec
+.pubspec.lock
+
+# IOS
+.ios/
+
+#Android
+.android/
+
+# MacOS
+.macos/
