--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.1
   email_validator: ^2.0.1
+  flutter_signin_button: ^2.0.0
+  flutter_native_splash: ^2.2.4
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+    - icons/facebook_icon.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
